--- a/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
@@ -17,7 +17,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type UserControl}">
                     <Grid>
-                        <Rectangle Fill="#FF1E1E1E" Opacity="{Binding AppConfig.MessageBackgroundOpacity}"/>
+                        <Rectangle Panel.ZIndex="-5" Fill="#FF1E1E1E" Opacity="{Binding AppConfig.MessageBackgroundOpacity}"/>
                         <ItemsControl Focusable="False" ItemsSource="{Binding Messages}" Padding="0" Margin="0,0,0,0">
                             <ItemsControl.Template>
                                 <ControlTemplate>
