--- a/Ubiquitous2/Skins/Shared/Shared.xaml
+++ b/Ubiquitous2/Skins/Shared/Shared.xaml
@@ -1,6 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <Style TargetType="{x:Type TextBlock}">
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+    </Style>
+    <Style TargetType="{x:Type Window}">
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+    </Style>
+    <Style TargetType="{x:Type UserControl}">
+        <Setter Property="TextElement.FontFamily" Value="Segoe UI"/>
+    </Style>
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Skins/Shared/ContextMenuSkin.xaml"/>
         <ResourceDictionary Source="/Skins/Shared/ScrollViewerSkin.xaml"/>
