--- a/Ubiquitous2/View/SettingSectionView.xaml
+++ b/Ubiquitous2/View/SettingSectionView.xaml
@@ -27,7 +27,7 @@
 
     </UserControl.Resources>
     <Grid>
-        <Border BorderThickness="0,1,0,0" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
+        <Border BorderThickness="0,1,0,0" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Padding="0,8,0,0">
             <Border.BorderBrush>
                 <LinearGradientBrush EndPoint="1,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFC5C5C5" Offset="0"/>
@@ -35,15 +35,15 @@
                 </LinearGradientBrush>
             </Border.BorderBrush>
 
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Left">
-                <TextBlock Padding="5" Margin="1">
-					<CheckBox Margin="0,-3" IsChecked="{Binding Enabled}"/>
-					<Image Margin="0,-5" Width="16" Source="{Binding IconURL}"/>
-					<TextBlock Text="{Binding Name}"></TextBlock>
-					<TextBlock><Hyperlink Command="{Binding ToggleEdit}"><TextBlock Text="{Binding EditLinkTitle}"/></Hyperlink></TextBlock>
-                    <TextBlock><Hyperlink Command="{Binding Restart}"><TextBlock>restart</TextBlock></Hyperlink></TextBlock>
-                    <Image Visibility="{Binding IsLoaderVisible, Converter={StaticResource boolToVisibilityConverter}}" Width="16" Height="16" gif:ImageBehavior.AnimatedSource="/Ubiquitous2;component/Resources/loader.gif" gif:ImageBehavior.RepeatBehavior="Forever" Margin="0,0,0,-4" />
-            </TextBlock>
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="10,5,5,5">
+					<CheckBox Margin="0,0,5,0" IsChecked="{Binding Enabled}" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+					<Image Margin="0,0,5,0" Height="16" Width="16" Source="{Binding IconURL}" VerticalAlignment="Top" HorizontalAlignment="Left" UseLayoutRounding="True"/>
+					<TextBlock Text="{Binding Name}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,5,0"></TextBlock>
+					<TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,5,0"><Hyperlink Command="{Binding ToggleEdit}"><TextBlock Text="{Binding EditLinkTitle}"/></Hyperlink></TextBlock>
+                    <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,5,0"><Hyperlink Command="{Binding Restart}"><TextBlock>restart</TextBlock></Hyperlink></TextBlock>
+                    <Image Visibility="{Binding IsLoaderVisible, Converter={StaticResource boolToVisibilityConverter}}" Width="16" Height="16" gif:ImageBehavior.AnimatedSource="/Ubiquitous2;component/Resources/loader.gif" gif:ImageBehavior.RepeatBehavior="Forever" Margin="0,0,5,0" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                </StackPanel>
                     
             <Expander Margin="5"  HorizontalAlignment="Left" HorizontalContentAlignment="Left"  Padding="0"  IsExpanded="{Binding Expanded}" Style="{DynamicResource ExpanderStyle}" VerticalAlignment="Top">
                 <ItemsControl ItemsSource="{Binding SettingsFields}"
