--- a/Ubiquitous2/View/SettingsWindow.xaml
+++ b/Ubiquitous2/View/SettingsWindow.xaml
@@ -16,7 +16,7 @@
         SnapsToDevicePixels="True"
         UseLayoutRounding="True"
         Topmost="True"
-        Title="SettingsWindow" Icon="..\ubiquitous smile.ico" MinWidth="500" Width="427.493" MinHeight="400" WindowStartupLocation="Manual">
+        Title="SettingsWindow" Icon="..\ubiquitous smile.ico" MinWidth="400" Width="500" MinHeight="250" WindowStartupLocation="Manual" Height="400">
     <i:Interaction.Behaviors>
         <Interactivity:WindowPersistentLocationBehavior WindowName="SettingsWindow"/>
     </i:Interaction.Behaviors>
@@ -111,22 +111,25 @@
                 <Grid Margin="10">
                     <ScrollViewer VerticalScrollBarVisibility="Auto">
                         <StackPanel Orientation="Vertical">
-                            <CheckBox IsChecked="{Binding AppConfig.EnableTransparency, Mode=TwoWay}" Content="Enable transparency" Command="{Binding ReopenMainWindow}" FontWeight="Bold"/>
-                            <TextBlock TextWrapping="Wrap" FontSize="9" Margin="20,0,0,0" FontStyle="Italic">
-                                <TextBlock.ToolTip>
-                                    <TextBlock>                                        
-                                        *Options to try if you get problems with OBS capture:
-                                        <LineBreak/>
-                                        - use "Save to png" service to capture window as image
-                                        <LineBreak/>
-                                        - try to enable "Capture layered windows" in OBS
-                                        <LineBreak/>
-                                        - disable Aero if you got Vista/Seven
-                                        <LineBreak/>
-                                        - put window on top of windowed game and capture whole monitor (CPU heavy)
-                                        <LineBreak/>
+                            <CheckBox IsChecked="{Binding AppConfig.EnableTransparency, Mode=TwoWay}" Content="Enable window background transparency" Command="{Binding ReopenMainWindow}" FontWeight="Bold">
+                                <CheckBox.ToolTip>
+                                    <TextBlock>
+                                            This option may cause FPS drop
+                                            <LineBreak/>
+                                            Options to try if you get black rectangle in the OBS:
+                                            <LineBreak/>
+                                            - use "Save to png" service to capture window as image
+                                            <LineBreak/>
+                                            - try to enable "Capture layered windows" in OBS
+                                            <LineBreak/>
+                                            - disable Aero if you got Vista/Seven
+                                            <LineBreak/>
+                                            - put window on top of windowed game and capture whole monitor (CPU heavy)
+                                            <LineBreak/>
                                     </TextBlock>
-                                </TextBlock.ToolTip>
+                                </CheckBox.ToolTip>
+                            </CheckBox>
+                            <TextBlock TextWrapping="Wrap" FontSize="9" Margin="20,0,0,0" FontStyle="Italic">
                             </TextBlock>
                             <CheckBox IsEnabled="{Binding AppConfig.EnableTransparency,Mode=OneWay}" IsChecked="{Binding AppConfig.MouseTransparency, Mode=TwoWay}" Content="Click-through window. Hold Ctrl to disable." FontWeight="Bold"/>
                             <GroupBox Header="Background opacity control" VerticalAlignment="Top" FontWeight="Bold" Margin="0,10,0,0">
